# macdev

./: .gitignore  .rubocop.yml  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE  README.md  justfile  macdev.gemspec  macdev.toml
.github/workflows/: release.yml
Formula/: macdev.rb
lib/: macdev.rb
lib/macdev/: cli.rb  completion.rb  environment.rb  homebrew.rb  lock.rb  manifest.rb  version.rb
spec/: spec_helper.rb
spec/macdev/: cli_spec.rb  completion_spec.rb  environment_spec.rb  homebrew_spec.rb  lock_spec.rb  manifest_spec.rb
src/: cli.rs  environment.rs  homebrew.rs  lib.rs  main.rs  manifest.rs  shell.rs
tests/: lock_tests.rs  manifest_tests.rs  package_parsing.rs
