[package]
name = "macdev"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["macdev contributors"]
description = "Project-isolated development environments on macOS using Homebrew"
repository = "https://github.com/kmarker1101/macdev"
readme = "README.md"
keywords = ["homebrew", "macos", "development", "environment", "nix"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.52", features = ["derive"] }
clap_complete = "4.5"
colored = "3.0.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
